[package]
name = "rename_files"
version = "0.1.6"
authors = ["Ethan Skowronski-Lutz"]
edition = "2021"

[lints.rust]
unsafe_code = { level = "forbid" }

[dependencies]
# chrono = "0.4"
clap = { version = "4", features = ["derive", "wrap_help"] }
# derive_more = "0.99"
# indicatif = "0.17"
# itertools = "0.13"
owo-colors = "4"
regex = { version = "1", features = ["logging"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
walkdir = "2"

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }
tempfile = "3"
# quickcheck = "1"
# quickcheck_macros = "1"
