[package]
name = "rename_files"
version = "0.4.1"
authors = ["Ethan Skowronski-Lutz"]
edition = "2021"
repository = "https://github.com/ethanmsl/rename_files"
categories = ["command-line-utilities", "file-system", "text-processing"]
publish = true
description = "CLI tool (& lib); regex search files & optionally rename. Recursive and Test flags available, but intentionally minimal."

[lints.rust]
unsafe_code = { level = "forbid" }

[dependencies]
# chrono = "0.4"
clap = { version = "4", features = ["derive", "wrap_help"] }
# derive_more = "0.99"
# indicatif = "0.17"
# itertools = "0.13"
owo-colors = "4"
regex = { version = "1", features = ["logging"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["chrono", "env-filter"] }
walkdir = "2"

[dev-dependencies]
test-log = { version = "0.2", features = ["trace"] }
tempfile = "3"
# quickcheck = "1"
# quickcheck_macros = "1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "plan"
# A GitHub repo to push Homebrew formulas to
tap = "ethanmsl/homebrew-rename_files"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
